# DrivingSchoolInternalApplication

./: .env.example  .gitignore  .ignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  import_data.py  supabase database password DrivingS.txt
.claude/: settings.local.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  ai.py  dashboard.py  database.py  main.py  payments.py  reports.py  students.py  training_days.py
backend/tests/: conftest.py  test_api.py  test_dashboard.py  test_database.py  test_payments.py  test_reports.py  test_students.py  test_training_days.py
docs/: api.md  database-schema.md  deployment.md  development.md  project-scope.md  qa-checklist.md  ui-flows.md
docs/superpowers/plans/: 2026-06-02-dashboard-card-drilldown.md
docs/superpowers/specs/: 2026-06-02-dashboard-card-drilldown-design.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: start.bat  start.sh  stop.bat  stop.sh
